engine-net-2/examples/Errors/ProcedureParametersOutNumberMismatch.grs
new graph "Rules.grg"

exec { (d:double,j:int)=p(42) }

quit
